# hacktech-sme

./: Documents.lnk
Chrome extensions/Email - compose/: content.js  manifest.json  styles.css
ChromeExtention/: manifest.json  service-worker.js  sidepanel.css  sidepanel.html  sidepanel.js
Compose Window Extension/: content.js
chatbot/: .env  pyproject.toml
chatbot/.credentials/: credentials.json
chatbot/app/: server.py
chatbot/app/auth/: utils.py
chatbot/app/drives/: google_drive.py
chatbot/app/graph/: agent.py
chatbot/app/tools/: ingestion.py  tools.py
extention/: background.js  manifest.json  popup.html  popup.js  styles.css
gen_token/: index.js  package-lock.json  package.json
