[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "2.7.4"
langchain = "^0.3.4"
langchain-openai = "^0.2.3"
langchain-pinecone = "^0.2.0"
python-dotenv = "^1.0.1"
langgraph = "^0.2.39"
langchain-community = "^0.3.3"
langchain-text-splitters = "^0.3.0"
pypdf2 = "^3.0.1"
google-api-python-client = "^2.149.0"
google-auth = "^2.35.0"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
